alarm-notify: Some reminders could be lost
I'm using GNOME Evolution 3.48.1 as my main calendar app, with the calendar itself hosted with Google. Lately a lot of alerts have been showing up at completely the wrong time. Right now (2023-10-21 00:00:00 Pacific/Auckland) I got an alert for an event starting at 2023-10-20 16:00:00 Pacific/Auckland (six hours ago) configured with a reminder to "Pop up an alert 1 hour before the start". That is, the alert was supposed to show up seven hours ago. (Thankfully, Google Calendar on my Android phone does the right thing and showed an alert at the right time.)
/etc/localtime
is symlinked to ../etc/zoneinfo/Pacific/Auckland
.