I#505 - alarm-notify: Some reminders could be lost

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/505