tests/libecal/test-cal-reminders.c
@@ -93,6 +93,7 @@ test_reminders_verify (const gchar *comp_str,
 
 	if (!alarms) {
 		g_assert_cmpint (n_expected_instances, ==, 0);
+		g_assert_false (e_cal_util_has_alarms_in_range (ecomp, start, end, omit, resolve_tzid, NULL, default_zone));
 	} else {
 		GHashTable *used_indexes; /* GUINT_TO_POINTER(index) ~> NULL */
 		GSList *received_instances, *link;
@@ -132,6 +133,7 @@ test_reminders_verify (const gchar *comp_str,
 		}
 
 		g_assert_cmpint (n_expected_instances, ==, g_hash_table_size (used_indexes));
+		g_assert_true (e_cal_util_has_alarms_in_range (ecomp, start, end, omit, resolve_tzid, NULL, default_zone));
 
 		g_hash_table_destroy (used_indexes);
 	}
